# open-moniker

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  WINDOWS_START.md  config.py  config.sample.yaml  config.yaml.bak  config_zmq.yaml  demo.py  pyproject.toml  render.yaml  render_config.yaml  sample_applications.yaml  sample_catalog.yaml  sample_config.yaml  sample_config_zmq.yaml  sample_domains.yaml  sample_models.yaml  sample_vendors.yaml  shortlinks.json  start.py  start_windows.bat  telemetry_subscriber.py  vendors.yaml
.github/workflows/: test.yml
business-catalog/: package-lock.json  package.json
business-catalog/e2e/: vendor-datasets.spec.ts
business-catalog/prisma/: schema.prisma
business-catalogue/: .gitignore  next.config.ts  package-lock.json  package.json  playwright.config.ts
business-catalogue/e2e/: layout-stability.spec.ts
catalogs/: README.md  catalog-dev.yaml  catalog-uat.yaml  shortlinks.json
client/moniker_client/: client.py  config.py
demo/: hydrate_queue.py  sample_demo_monikers.yaml  sample_queries.py
deployments/: README.md
deployments/aws/: README.md
deployments/local/: README.md  bootstrap.py  quick_start.py  test_all.py
deployments/render/: Dockerfile.java  README.md  create_python_service.py  deploy.py  render.yaml  test_render.py
docs/: OM-10_shortlinks-design.md  OM-11-community-save-load-design.md  OM-14-management-landing-cards.md  PARENT_NODE_RESOLUTION.md  README.md  aws-dns-resolution-flow.drawio  aws-go-control-plane.md  aws-multi-region-deployment.drawio  process-split-plan.md
docs/deprecation/: README.md  technical.md
docs/shortlinks/: README.md
examples/: api_demo.py  multi_domain_demo.py  risk_cvar_demo.py
mcp-server-openmoniker/: README.md  mcp_config_example.json  pyproject.toml  server.py  test_harness.py
moniker_svc/: _bootstrap.py  config.py  main.py  management_app.py  mcp.py  resolver_app.py  service.py
moniker_svc/applications/: __init__.py  models.py  registry.py  routes.py  serializer.py
moniker_svc/auth/: authenticator.py  dependencies.py
moniker_svc/catalog/: loader.py  serializer.py  types.py
moniker_svc/community/: __init__.py  models.py  routes.py  (+1 more)
resolver-go/: BENCHMARK_RESULTS.md  FINAL_RESULTS.md  IMPLEMENTATION_STATUS.md  LOAD_TEST_RESULTS.md  Makefile  QUICKSTART.md  README.md  benchmark.sh  go.mod  test_all_routes.sh  test_catalog.yaml
resolver-java/: README.md  VERIFICATION_GUIDE.md  pom.xml
scripts/: generate_test_token.py  run_all_tests.py
tests/: README.md  bootstrap_test.py  load_test.py  load_tester.py  requirements.txt  test_api.py  test_auth.py  test_cache.py  test_community.py  test_dialects.py  test_error_paths.py  test_governance.py  test_mcp.py  test_models_applications.py  test_shortlinks.py  test_ui.py
(+254 files in other folders)
